# hermetic

./: .gitignore  README.md  pyproject.toml
example_projects/factuality_eval/: factuality_evaluation_answer_first.ipynb  multichoice.ipynb  order_bias_analysis.ipynb
example_projects/pirate/: pirate_langchain.py  pirate_openai.py
example_projects/pirate/resources/prompts/: system_msg.txt
hermetic/agents/: langchain_llm_agent.py  openai_chat_agent.py
hermetic/core/: agent.py  message.py  presenter.py  prompt_mgr.py  store.py  tool.py  tracing.py  types.py
hermetic/examples/: openai_gradio_chat.py
hermetic/presenters/: gradio_presenter.py
hermetic/stores/: file_store.py
src/hermetic/: pyproject.toml
src/hermetic/agents/: langchain_chat_agent.py  openai_chat_agent.py
src/hermetic/core/: agent.py  environment.py  eval.py  message.py  prompt_mgr.py
src/hermetic/presenters/: gradio_presenter.py  script_presenter.py  stdio_presenter.py
src/hermetic/stores/: mongo_store.py
