[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "hermetic"
version = "0.0.15"
description = "A tool to simplify developing, testing, evaluating and deploying LLMs"
authors = [
    {name = "M Waleed Kadous", email = "mwk@anyscale.com"}
]
dependencies = [
    "openai",
    "langchain",
    "gradio>=3.21.0",
    "pymongo",
    "pyyaml",
    "python-dotenv", 
    "tiktoken"
]
