[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hermetic"
version = "0.0.1"
authors = [
  { name="Waleed Kadous", email="mwk@anyscale.com" },
]
description = "Hermetic is a library for developing, evaluating, deploying and refining LLM Applications"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]